added root resource with welcome message

--- a/snoop-world/src/main/webapp/index.html
+++ b/snoop-world/src/main/webapp/index.html
@@ -29,6 +29,6 @@ THE SOFTWARE.
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
-      <div>Welcome to this Demo!</div>
+      <div>Welcome to the World Resource</div>
    </body>
 </html>
