--- a/snoop-swarm/src/main/webapp/index.html
+++ b/snoop-swarm/src/main/webapp/index.html
@@ -29,6 +29,6 @@ THE SOFTWARE.
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
-      <div>Welcome to this Swarm Demo!</div>
+      <div>Welcome to the Swarm Service!</div>
    </body>
 </html>
